compliting favicon change

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script>
       window.onblur = function  () {
-        let favicon;
         let nodeList = document.getElementsByTagName("link");
         for (let i = 0; i < nodeList.length; i++) {
           if(nodeList[i].getAttribute("rel") == "icon") {
-            nodeList[i].removeAttribute("href");
-            nodeList[i].setAttribute("href", "%PUBLIC_URL%/reactive.png");
+            nodeList[i].removeAttribute("href"),
+            nodeList[i].setAttribute("href", "%PUBLIC_URL%/reactive.png")
           }
         }
-        return url;  
       }
     </script>
     <title>React App</title>
